src/test/ui/static/static-mut-not-pat.stderr
error[E0530]: match bindings cannot shadow statics
  --> $DIR/static-mut-not-pat.rs:23:9
   |
LL | static mut a: isize = 3;
   | ------------------------ a static `a` is defined here
...
LL |         a => {} //~ ERROR match bindings cannot shadow statics
   |         ^ cannot be named the same as a static

error[E0530]: match bindings cannot shadow statics
  --> $DIR/static-mut-not-pat.rs:46:9
   |
LL | static mut STATIC_MUT_FOO: Foo = Foo { bar: Some(Direction::West), baz: NEW_FALSE };
   | ------------------------------------------------------------------------------------ a static `STATIC_MUT_FOO` is defined here
...
LL |         STATIC_MUT_FOO => (),
   |         ^^^^^^^^^^^^^^ cannot be named the same as a static

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0530`.
